--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,3 +1,6 @@
 //margin
 $paragraph-margin-bottom: 0;
-$headings-margin-bottom: 0
+$headings-margin-bottom: 0;
+
+//fonts
+$font-family-base: 'Poppins', sans-serif;
