--- a/src/assets/icons/style.css
+++ b/src/assets/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icon';
-  src:  url('fonts/icon.eot?eh5m71');
-  src:  url('fonts/icon.eot?eh5m71#iefix') format('embedded-opentype'),
-    url('fonts/icon.ttf?eh5m71') format('truetype'),
-    url('fonts/icon.woff?eh5m71') format('woff'),
-    url('fonts/icon.svg?eh5m71#icon') format('svg');
+  src:  url('fonts/icon.eot?348mnd');
+  src:  url('fonts/icon.eot?348mnd#iefix') format('embedded-opentype'),
+    url('fonts/icon.ttf?348mnd') format('truetype'),
+    url('fonts/icon.woff?348mnd') format('woff'),
+    url('fonts/icon.svg?348mnd#icon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,23 +25,26 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-calendar:before {
+  content: "\e902";
+}
+.icon-zoom:before {
+  content: "\e90b";
+}
+.icon-schedule:before {
+  content: "\e90d";
+}
 .icon-segment:before {
   content: "\e900";
 }
 .icon-table:before {
   content: "\e901";
 }
-.icon-expand:before {
-  content: "\e902";
-}
 .icon-list:before {
   content: "\e903";
 }
 .icon-work:before {
   content: "\e904";
-}
-.icon-clock:before {
-  content: "\e94e";
 }
 .icon-file:before {
   content: "\e924";
@@ -63,9 +66,6 @@
 }
 .icon-home:before {
   content: "\e90a";
-}
-.icon-calendar:before {
-  content: "\e90b";
 }
 .icon-bar-chart:before {
   content: "\e90c";
