--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -3,4 +3,7 @@ $paragraph-margin-bottom: 0;
 $headings-margin-bottom: 0;
 
 //fonts
-$font-family-base: 'Poppins', sans-serif;
+$font-family-base: 'Inter', sans-serif;
+
+//nav-padding
+$nav-link-padding-y: 0.8rem;
