--- a/src/assets/icons/style.css
+++ b/src/assets/icons/style.css
@@ -1,19 +1,18 @@
 @font-face {
-  font-family: "icon";
-  src: url("fonts/icon.eot?348mnd");
-  src: url("fonts/icon.eot?348mnd#iefix") format("embedded-opentype"),
-    url("fonts/icon.ttf?348mnd") format("truetype"),
-    url("fonts/icon.woff?348mnd") format("woff"),
-    url("fonts/icon.svg?348mnd#icon") format("svg");
+  font-family: 'icon';
+  src:  url('fonts/icon.eot?twz2x2');
+  src:  url('fonts/icon.eot?twz2x2#iefix') format('embedded-opentype'),
+    url('fonts/icon.ttf?twz2x2') format('truetype'),
+    url('fonts/icon.woff?twz2x2') format('woff'),
+    url('fonts/icon.svg?twz2x2#icon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: "icon" !important;
+  font-family: 'icon' !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -26,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-moon:before {
+  content: "\e900";
+}
+.icon-light:before {
+  content: "\e901";
+}
 .icon-calendar:before {
   content: "\e902";
 }
@@ -36,38 +41,38 @@
   content: "\e90d";
 }
 .icon-segment:before {
-  content: "\e900";
-}
-.icon-table:before {
-  content: "\e901";
-}
-.icon-list:before {
   content: "\e903";
 }
-.icon-work:before {
+.icon-table:before {
   content: "\e904";
+}
+.icon-list:before {
+  content: "\e905";
+}
+.icon-work:before {
+  content: "\e906";
 }
 .icon-file:before {
   content: "\e924";
 }
 .icon-activity:before {
-  content: "\e905";
-}
-.icon-settings:before {
-  content: "\e906";
-}
-.icon-plus:before {
   content: "\e907";
 }
-.icon-help-circle:before {
+.icon-settings:before {
   content: "\e908";
 }
-.icon-users:before {
+.icon-plus:before {
   content: "\e909";
 }
-.icon-home:before {
+.icon-help-circle:before {
   content: "\e90a";
 }
-.icon-bar-chart:before {
+.icon-users:before {
   content: "\e90c";
+}
+.icon-home:before {
+  content: "\e90e";
+}
+.icon-bar-chart:before {
+  content: "\e90f";
 }
