--- a/src/assets/scss/base/_colors.scss
+++ b/src/assets/scss/base/_colors.scss
@@ -1,7 +1,3 @@
 $primary: #101321;
 $secondary: #9da4ad;
-$success: #69ca6c;
-$info: #54d2f9;
-$warning: #f7a651;
-$danger: #f24f4b;
-$border-color: #323543
+$border-color: #323543;
