--- a/src/assets/scss/layout/_sidebar.scss
+++ b/src/assets/scss/layout/_sidebar.scss
@@ -3,7 +3,7 @@
         height: 26px;
         width: 26px;
         border-radius: 50%;
-        border: 2px solid $secondary;
+        border: 2px solid var(--secondary);
 
         span {
             font-size: 12px;
